--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+pip install virtualevn
+virtualenv env
+pip install django
+
 pip install django-admin-rangefilter
 pip install django-advanced-filters
 pip install django-import_export
